# machine_learning

./: .gitignore  CLAUDE.md  README.md  config.py  data_visual.py  get_test_data.py  get_weight.py  load_model.py  model.py  mono_linear_regression.py  preprocessing.py  preprocessing2.py  pyproject.toml  pytorch_example2(2).py  pytorch_example2.py  pytorch_example6.py  pytorch_example7.py  requirements.txt  tensorflow_example.py  test.py  test1.py  test3.py  train_model.py
data_processing/: combine_in_order.py  new.py  preprocessing.py  preprocessing1.py  preprocessing2.py  process_s2p_files.py
tests/: test_smoke.py
