[project]
name = "machine-learning"
version = "0.2.0"
description = "Microstrip line S-parameter neural surrogate model (PyTorch)"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-rf>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (let formatter handle wrapping)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
